# Vulkan-LoaderAndValidationLayers

./: .gitignore  CMakeLists.txt  LunarGLASS_revision_v31  Makefile  README.md  build_windows_targets.bat  determine_vs_version.py  glslang_revision  update_external_sources.bat  update_external_sources.sh  vk-generate.py  vk-layer-generate.py  vk.xml  vk_helper.py  vulkan.py
build-android/: android-generate.bat  android-generate.sh  build.py  build_all.sh  glslang_revision_android  shaderc_revision_android  spirv-headers_revision_android  spirv-tools_revision_android  update_external_sources_android.sh
build-android/gradle-templates/: common.gradle
build-android/jni/: Android.mk
cube/: CMakeLists.txt
demos/: CMakeLists.txt  cube.c  tri.c  vulkaninfo.c
demos/android/jni/: Android.mk  Application.mk
demos/macOS/vulkaninfo/: vulkaninfo.cmake
external_revisions/: glslang_revision
icd/: CMakeLists.txt
icd/intel/: cmd_pipeline.c  gpu.c  intel.h  intel_icd.json  pipeline.c  query.c  wsi_x11.c
icd/linux/: VkICD_mock_icd.json
icd/windows/: VkICD_mock_icd.json
include/: vulkan.h
include/vulkan/: vk_icd.h  vk_layer.h  vulkan.h  vulkan.hpp
layers/: CMakeLists.txt  README.md  buffer_validation.cpp  buffer_validation.h  core_validation.cpp  core_validation.h  core_validation_error_enums.h  core_validation_types.h  descriptor_sets.cpp  descriptor_sets.h  device_limits.cpp  draw_state.cpp  draw_state.h  glave_snapshot.c  glave_snapshot.h  image.cpp  image.h  mem_tracker.cpp  object_tracker.cpp  object_tracker.h  param_checker.cpp  parameter_validation.cpp  parameter_validation.h  parameter_validation_utils.cpp  parameter_validation_utils.h  screenshot.cpp  shader_checker.cpp  swapchain.cpp  swapchain.h  threading.cpp  threading.h  unique_objects.cpp  unique_objects.h  vk_layer_config.cpp  vk_layer_config.h  vk_layer_logging.h  vk_layer_utils.h  vk_loader_layer.h  vk_validation_error_database.txt  vk_validation_layer_details.md
layers/linux/: api_dump.json  basic.json  device_limits.json  draw_state.json  image.json  mem_tracker.json  multi.json  object_tracker.json  param_checker.json  screenshot.json  shader_checker.json  swapchain.json  threading.json
layers/windows/: api_dump.json  basic.json  device_limits.json  draw_state.json  generic.json  image.json  mem_tracker.json  multi.json  object_tracker.json  param_checker.json  screenshot.json  shader_checker.json  swapchain.json  threading.json
libs/vkjson/: CMakeLists.txt
loader/: CMakeLists.txt  LinuxICDs.txt  LoaderAndLayerInterface.md  debug_report.c  dev_ext_trampoline.c  extensions.c  extensions.h  loader.c  loader.h  phys_dev_ext.c  table_ops.h  trampoline.c  vk_loader_platform.h  wsi.c
scripts/: helper_file_generator.py  lvl_genvk.py  mock_icd_generator.py  parameter_validation_generator.py  threading_generator.py  unique_objects_generator.py  vk-generate.py  vk.xml  vk_helper.py  vulkan.py
tests/: CMakeLists.txt  blit_tests.cpp  init.cpp  layer_validation_tests.cpp  loader_validation_tests.cpp  render_tests.cpp  run_all_tests_with_layers.ps1  run_loader_tests.sh  vk_layer_settings.txt  vkglavetracereplay.ps1  vkglavetracereplay.sh  vkrenderframework.cpp  vkrenderframework.h  vktestbinding.cpp  vktestbinding.h  vktestframework.cpp
tests/layers/: CMakeLists.txt  VkLayer_device_profile_api.def  device_profile_api.cpp  vk_device_profile_api_layer.h
tests/layers/linux/: VkLayer_device_profile_api.json
tests/layers/windows/: VkLayer_device_profile_api.json
tools/glave/scripts/: vk_generate.py
tools/glave/src/glv_extensions/glvdebug_vk/: CMakeLists.txt  glvdebug_vk_qcontroller.cpp  glvdebug_vk_qcontroller.h  glvdebug_vk_qgroupframesproxymodel.h
tools/glave/src/glv_extensions/glvreplay_vk/: CMakeLists.txt  glvreplay_vk.cpp  glvreplay_vk_vkdisplay.cpp  glvreplay_vk_vkdisplay.h  glvreplay_vk_vkreplay.cpp  glvreplay_vk_vkreplay.h  glvreplay_vk_write_ppm.h
tools/glave/src/glv_extensions/glvtrace_vk/: CMakeLists.txt  glvtrace_vk.c  glvtrace_vk_helpers.h  glvtrace_vk_trace.c
tools/glave/src/glvdebug/: glvdebug.cpp  glvdebug.h  glvdebug_QReplayWidget.h  glvdebug_QReplayWorker.cpp  glvdebug_QReplayWorker.h  glvdebug_view.h
vktrace/: vktrace_generate.py
vktrace/src/vktrace_extensions/vktracevulkan/vkreplay/: vkreplay_vkreplay.cpp
vktrace/src/vktrace_layer/linux/: vktrace_layer.json
vktrace/src/vktrace_layer/windows/: vktrace_layer.json
vulkaninfo/: CMakeLists.txt
